tests/snapshots/construction_submit__construction_submit_duplicate.snap
---
source: tests/construction_submit.rs
expression: response
---
Err(
    TransactionSubmitDuplicate(
        "Transaction already in database",
    ),
)
