tests/snapshots/construction_submit__construction_submit_empty.snap
---
source: tests/construction_submit.rs
expression: response
---
Err(
    JsonParse(
        Some(
            "Failed to deserialize signed transaction: missing field `signature` at line 1 column 2",
        ),
    ),
)
