tests/snapshots/construction_submit__construction_submit_insufficient_balance.snap
---
source: tests/construction_submit.rs
expression: response
---
Err(
    TransactionSubmitInsufficientBalance(
        "Couldn't send user command: [\"Insufficient_funds\"]",
    ),
)
