tests/snapshots/construction_submit__construction_submit_insufficient_fee.snap
---
source: tests/construction_submit.rs
expression: response
---
Err(
    TransactionSubmitFeeSmall(
        "Invalid user command. Fee 0.000000001 is less than the minimum fee, 0.001.",
    ),
)
