tests/snapshots/construction_submit__construction_submit_payment_and_delegation.snap
---
source: tests/construction_submit.rs
expression: response
---
Err(
    JsonParse(
        Some(
            "Signed transaction must have one of: payment, stake_delegation",
        ),
    ),
)
